[package]
name = "clash"
description = "Cards (live) against humanity"
version = "0.1.0"
authors = ["Nils Wrenger <nils@wrenger.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nwrenger/clash"
publish = false

[dependencies]
axum = { version = "0.8.4", features = [
    "ws",
    "tower-log",
    "tracing",
    "json",
], default-features = false }
axum-server = { version = "0.7.2", features = [
    "tls-rustls",
], default-features = false }
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slab = { version = "0.4.10", features = ["serde"] }
tokio = { version = "1.46.1", features = [
    "sync",
    "signal",
    "rt-multi-thread",
], default-features = false }
tokio-util = "0.7.15"
tower = { version = "0.5.2", features = [
    "util",
    "timeout",
], default-features = false }
tower-http = { version = "0.6.6", features = [
    "fs",
    "compression-deflate",
    "trace",
    "cors",
], default-features = false }
openssl = { version = "0.10.73", features = ["vendored"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
dashmap = { version = "6.1.0" }
